--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,7 +76,8 @@ hr {
   transition: all 0.8s;
 }
 #menu.navbar-default {
-  background-color: #fff;
+  color: white;
+  background-color: #000000;
   border-color: rgba(231, 231, 231, 0);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
@@ -84,13 +85,13 @@ hr {
   font-family: "Raleway", sans-serif;
   font-size: 24px;
   font-weight: 700;
-  color: #333;
+  color: #ffffff;
   text-transform: uppercase;
 }
 #menu.navbar-default .navbar-nav > li > a {
   font-family: "Lato", sans-serif;
   text-transform: uppercase;
-  color: #555;
+  color: #d8d8d8;
   font-size: 15px;
   font-weight: 400;
   padding: 8px 2px;
@@ -104,7 +105,7 @@ hr {
   bottom: -1px;
   width: 0;
   height: 2px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #5c67fb 0%, #9a63ff 100%);
   content: "";
   transition: width 0.2s;
 }
@@ -125,7 +126,7 @@ hr {
   bottom: -1px !important;
   width: 100% !important;
   height: 2px !important;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%) !important;
+  background: linear-gradient(to right, #5c67fb 0%, #9a63ff 100%) !important;
   content: "" !important;
   transition: width 0.2s !important;
 }
@@ -152,7 +153,7 @@ hr {
 .section-title h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background: linear-gradient(to right, #5c67fb 0%, #9a63ff 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -163,19 +164,27 @@ hr {
   font-size: 18px;
 }
 .btn-custom {
+  display: flex;
+  z-index: 1;
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   color: #fff;
-  background-color: #5ca9fb;
-  background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background-color: #7f5cfb;
+  background-image: linear-gradient(to right, #5c67fb 0%, #9a63ff 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
   margin: 0;
-  font-size: 15px;
-  font-weight: 500;
-  border-radius: 25px;
-  transition: all 0.5s linear;
+  width: 50%;
+  height: 3em;
+  font-size: min(2rem, 4vw);
+    font-weight: 500;
+  border-radius: 2em;
+  transition: all 1s, margin 0.6s, box-shadow 0.6s;
+  position: relative;
+  background-size: 100% 200%;
   border: 0;
+  justify-content: center;
+  align-items: center;
 }
 .btn-custom:hover,
 .btn-custom:focus,
@@ -184,7 +193,9 @@ hr {
 .btn-custom.active {
   color: #fff;
   background-image: none;
-  background-color: #6372ff;
+  background-color: #9a63ff;
+  margin-top: -1rem;
+  box-shadow: 0 1rem 2.5rem #9a63ff77;
 }
 .btn:active,
 .btn.active {
@@ -205,26 +216,26 @@ a:focus,
 }
 /* Header Section */
 .intro {
-  display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
-  background-color: #e5e5e5;
+  background: black;
+  background-color: b;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
 }
 .intro .overlay {
-  background: rgba(0, 0, 0, 0.2);
+  /* background: rgba(0, 0, 0, 0.2); */
 }
 .intro h1 {
   font-family: "Raleway", sans-serif;
   color: #fff;
-  font-size: 82px;
+  font-size: min(7rem, 6vw);
   font-weight: 700;
   text-transform: uppercase;
   margin-top: 0;
+  text-align: left;
   margin-bottom: 10px;
 }
 .intro h1 span {
@@ -233,17 +244,32 @@ a:focus,
 }
 .intro p {
   color: #fff;
-  font-size: 22px;
+  font-size: min(2rem, 5vw);
   font-weight: 300;
+  width: 75%;
   line-height: 30px;
-  margin: 0 auto;
+  margin: 0;
+  text-align: left;
   margin-bottom: 60px;
 }
 header .intro-text {
   padding-top: 350px;
-  padding-bottom: 200px;
-  text-align: center;
+    display: flex;
+    padding-bottom: 200px;
+    text-align: center;
+    flex-direction: column;
+    align-items: flex-start;
 }
+
+#tsparticles canvas{
+  filter: blur(2px);
+}
+
+#services .container .row{
+  display: flex;
+  justify-content: center;
+}
+
 /* Features Section */
 #features {
   background: #f6f6f6;
@@ -310,19 +336,21 @@ header .intro-text {
 /* Services Section */
 #services {
   padding: 100px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  color: #fff;
+  background: white;
+  color: black;
+  z-index: 1;
+  position: relative;
 }
 #services .service-desc {
   margin: 10px 10px 20px;
 }
 #services h2 {
-  color: #fff;
+  color: black;
 }
 #services .section-title h2::after {
   position: absolute;
   content: "";
-  background: rgba(255, 255, 255, 0.3);
+  background: linear-gradient(to right, #5c67fb 0%, #9a63ff 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -334,18 +362,20 @@ header .intro-text {
   width: 120px;
   height: 120px;
   padding: 40px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: transparent;
   border-radius: 50%;
-  color: #fff;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+  color: black;
+  background: linear-gradient(313deg, #ffffff 60%, #0000001c);
+  box-shadow: 16px 16px 30px #0000002e, -16px -16px 52px #ffffff24;
+  border: 2px solid #743aff;
 }
 #services h3 {
   font-weight: 500;
   padding: 5px 0;
-  color: #fff;
+  color: black;
 }
 #services p {
-  color: rgba(255, 255, 255, 0.75);
+  color: black;
 }
 #services .service-desc {
   margin-bottom: 40px;
@@ -460,7 +490,7 @@ header .intro-text {
 /* Contact Section */
 #contact {
   padding: 100px 0 60px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: black;
   color: rgba(255, 255, 255, 0.75);
 }
 #contact .section-title {
