--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,63 @@
     width: 100%;
   }
 }
+
+
+.client-title{
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  color: #333;
+  font-size: min(7vw, 40px);
+}
+
+.client-title img{
+  width: min(80%, 500px);
+}
+
+.client-info-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 5vh 20vw;
+  font-size: 1.5vw;
+}
+
+.client-info-container p{
+  font-size: max(1.5vw, 13px);;
+}
+
+.client-info-container h2{
+  font-weight: 400;
+  color: #975ce1;
+}
+
+.lightwidget-widget .lightwidget__follow-btn {
+  filter: hue-rotate(58deg);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #000;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  font-size: 1.2em;
+}
+
+.dropdown-content a{
+  margin: 5px;
+  color: white;
+}
+
+.dropdown-content a:hover{
+  color: #9191ff;
+}
+
+.testimonials-dropdown:hover .dropdown-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
