--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,34 @@
   align-items: center;
   
 }
+
+.follow-button{
+  background: #8b37eb;
+  box-shadow: #843cd6 0 0px 0px 0px;
+  border-radius: 999px;
+  /* box-shadow: #843cd6 0 10px 20px -10px; */
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  opacity: 1;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: min(100%, 170px);
+  word-break: break-word;
+  border: 0;
+  margin: 10px;
+  transition: all 0.2s;
+}
+
+.follow-button:hover{
+  background: #7942b8;
+
+  box-shadow: #843cd6 0 10px 20px -10px;
+}
