--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,9 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.205);
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.205);
   z-index: 1;
   font-size: 1.2em;
 }
